Index page invisible divider fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,7 +45,7 @@ html {
     width: 1px;
     opacity: 0.3;
     background-color: #25C472;
-    height: 40%;
+    /* height: 40%; */
 }
 
 .bg-grid {
